added lots of content

--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,10 @@
 title: Jake
 subtitle: Roller
 email:
-description: I'm an undergraduate student at Worcester Polytechnic Institute studying Aerospace Engineering, graduating in March 2023.
-# An undergraduate student at Worcester Polytechnic Institute graduating in March 2023 with a degree in Aerospace Engineering with a focus in Astronautical Engineering and a minor in Electrical Engineering. I'm passionate about rocketry and space systems and am currently seeking an entry level engineering position in the field.
+description: I'm an undergraduate student at Worcester Polytechnic Institute studying Aerospace Engineering and minoring in Electrical Engineering, graduating in March 2023. Throughout this time, I’ve had the opportunity to partake in several projects as well as gain professional experience. Browse through each project to learn more!
 baseurl:  # the subpath of your site, e.g. /blog
-url: # the base hostname & protocol for your site
-author:
+url: jakeroller.com # the base hostname & protocol for your site
+author: Jake Roller
 street_address:
 city:
 state:
