--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ subtitle: Roller
 email:
 description: I'm an undergraduate student at Worcester Polytechnic Institute studying Aerospace Engineering and minoring in Electrical Engineering, graduating in March 2023. Throughout this time, I’ve had the opportunity to partake in several projects as well as gain professional experience. Browse through each project to learn more!
 baseurl:  # the subpath of your site, e.g. /blog
-url: jakeroller.com # the base hostname & protocol for your site
+url: # the base hostname & protocol for your site
 author: Jake Roller
 street_address:
 city:
