--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Jake
 subtitle: Roller
 email:
-description: I'm an undergraduate student at Worcester Polytechnic Institute studying Aerospace Engineering and minoring in Electrical Engineering, graduating in March 2023. Throughout this time, I’ve had the opportunity to partake in several projects as well as gain professional experience. Browse through each project to learn more!
+description: I'm passionate about rocketry and space systems and am currently working at Astra on test stand development for in-space propulsion. I graduated from Worcester Polytechnic Institute in March 2023 with a degree in Aerospace Engineering focusing on Astronautical Engineering and a minor in Electrical Engineering. Browse through each project to learn more!
 baseurl:  # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author: Jake Roller
